# rest-api-example

./: README.md
flask/demo/: .gitignore  .pre-commit-config.yaml  README.md  env.sample  pyproject.toml  wsgi.py
flask/demo/app/: __init__.py
flask/demo/app/api/: __init__.py  auth.py
flask/demo/app/api/models/: farm.py  farmer.py  mixins.py  user.py
flask/demo/app/api/routes/: error.py  farmers.py  farms.py
flask/demo/app/errors/: __init__.py  handlers.py
flask/demo/app/templates/: base.html
flask/demo/config/: db.py  default.py
flask/demo/migrations/: env.py
flask/demo/migrations/versions/: 964375da0e75_add_farm_and_farmer_tables.py  f6e97a20d9f6_initial_migration.py
flask/demo/src/: __init__.py
flask/demo/src/api/: __init__.py  auth.py
flask/demo/src/api/models/: farm.py  farmer.py  user.py
flask/demo/src/api/routes/: error.py  farmers.py  farms.py
