[tool.poetry]
name = "demo"
version = "0.1.0"
description = "An example rest(ful) api written with Flask"
authors = ["clovisphere <clovis.mugaruka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"
flask-migrate = "^4.0.7"
gunicorn = "^21.2.0"
flask-httpauth = "^4.8.0"
werkzeug = "^3.0.1"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
coverage = "^7.4.4"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
